--- a/sass/component/_services-card.scss
+++ b/sass/component/_services-card.scss
@@ -11,6 +11,7 @@
             text-align: center;
         }
         h5{
+            margin-top: 10px;
             color: blue;
         }
         p{
