change style service and health check

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 nav {
-  background: rgb(215, 219, 224);
+  background-color: rgb(153, 221, 221);
   display: flex;
   justify-content: space-between;
 }
@@ -11,7 +11,6 @@ nav {
   align-items: center;
   margin-left: 40px;
 }
-
 .nav-left img {
   height: 50px;
   margin-top: 15px;
@@ -24,16 +23,13 @@ nav {
   align-items: center;
   margin-right: 40px;
 }
-
 .nav-right ul {
   display: flex;
   gap: 40px;
 }
-
 .nav-right ul li {
   list-style: none;
 }
-
 .nav-right ul li a {
   text-decoration: none;
 }
