--- a/css/health-check-up.css
+++ b/css/health-check-up.css
@@ -1,1 +1,62 @@
-/*# sourceMappingURL=health-check-up.css.map */
+nav {
+  background-color: rgb(153, 221, 221);
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-left {
+  flex: 1;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: 40px;
+}
+.nav-left img {
+  height: 50px;
+  margin-top: 15px;
+}
+
+.nav-right {
+  flex: 1;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin-right: 40px;
+}
+.nav-right ul {
+  display: flex;
+  gap: 40px;
+}
+.nav-right ul li {
+  list-style: none;
+}
+.nav-right ul li a {
+  text-decoration: none;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.card {
+  width: 30%;
+  height: 340px;
+  background: gainsboro;
+}
+.card .card-footer {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+.card .card-footer h5 {
+  padding: 10px;
+  text-align: center;
+}
+.card .card-footer h5 {
+  color: blue;
+}
+.card .card-footer p {
+  font-size: 13px;
+}/*# sourceMappingURL=health-check-up.css.map */
