--- a/sass/component/_services-card.scss
+++ b/sass/component/_services-card.scss
@@ -8,7 +8,10 @@
         flex-direction: column;
         gap: 7px;
         h5{
-            padding: 10px;
+            margin-top: 15px;
+            text-align: center;
+        }
+        p{
             text-align: center;
         }
         h5{
