#14 template card for card-service and card health-check

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: rgb(153, 221, 221);
+  background-color: rgb(171, 215, 239);
   display: flex;
   justify-content: space-between;
 }
@@ -38,4 +38,5 @@ nav {
   padding: 0;
   margin: 0;
   list-style-type: none;
+  font-family: sans-serif;
 }/*# sourceMappingURL=main.css.map */
