--- a/sass/component/_services-card.scss
+++ b/sass/component/_services-card.scss
@@ -1,6 +1,17 @@
+.container{
+    display: flex;
+    justify-content: center;
+}
+.container-card{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 .card {
     width: 30%;
     height: 340px;
+    margin-top: 50px;
     background: gainsboro;
 
     .card-footer{
@@ -11,15 +22,13 @@
             margin-top: 15px;
             text-align: center;
         }
-        p{
-            text-align: center;
-        }
         h5{
 
             color: blue;
         }
         p{
             font-size: 13px;
+            text-align: center;
         }
     }
 }
