#20 create page health-check-up in html and sass

--- a/css/health-check-up.css
+++ b/css/health-check-up.css
@@ -67,6 +67,7 @@ nav {
 .card .card-footer h5 {
   margin-top: 15px;
   text-align: center;
+  text-transform: uppercase;
 }
 .card .card-footer h5 {
   color: blue;
