--- a/sass/component/_services-card.scss
+++ b/sass/component/_services-card.scss
@@ -21,6 +21,7 @@
         h5{
             margin-top: 15px;
             text-align: center;
+            text-transform: uppercase;
         }
         h5{
 
