#15 create form for appointment

--- a/css/home.css
+++ b/css/home.css
@@ -169,4 +169,81 @@ footer .main-footer .footer-right .footer-item {
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+}
+
+.contact-us .container .form-container {
+  width: 400px;
+  height: 350px;
+  background: rgba(168, 162, 162, 0.4666666667);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  border: 2px solid rgb(70, 68, 68);
+}
+
+.contact-us .container .form-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-us .container .form-container form input {
+  margin-top: 25px;
+  padding: 10px;
+  width: 150%;
+  border-radius: 5px;
+  border: none;
+}
+
+.contact-us .container .form-container button {
+  width: 100px;
+  padding: 10px;
+  margin-top: 25px;
+  border-radius: 10px;
+  border: none;
+  background: rgb(90, 202, 240);
+}
+
+.contact-us {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-us h1 {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.contact-us .check-schedule {
+  width: 100%;
+  height: 475px;
+  background-image: url(/image/form.jpg);
+}
+
+.contact-us .check-schedule .container {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  margin-right: 80px;
+}
+
+.contact-us .check-schedule button {
+  width: 150px;
+  padding: 10px;
+  margin-top: 30px;
+  margin-left: 70px;
+  border-radius: 10px;
+  border: none;
+  background: darkblue;
+  color: white;
+}
+
+.location h1 {
+  margin-top: 50px;
+  margin-bottom: 60px;
+  text-align: center;
 }/*# sourceMappingURL=home.css.map */
