--- a/sass/component/_ourDoctor.scss
+++ b/sass/component/_ourDoctor.scss
@@ -26,6 +26,9 @@
 .our-doctor .container .card-header{
     width: 270px;
     height: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .our-doctor .container .card-header img{
     height: 170px;
@@ -38,4 +41,5 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    gap: 10px;
 }
