--- a/sass/component/_services-card.scss
+++ b/sass/component/_services-card.scss
@@ -12,6 +12,7 @@
     width: 30%;
     height: 340px;
     margin-top: 50px;
+    margin-bottom: 50px;
     background: gainsboro;
 
     .card-footer{
