--- a/sass/home.scss
+++ b/sass/home.scss
@@ -2,11 +2,5 @@
 @import './component/whyTheyChooseUs';
 @import './component/ourDoctor';
 @import './component/MakeAppointment';
-
-.location h1{
-    margin-top: 50px;
-    margin-bottom: 60px;
-    text-align: center;
-}
-
+@import "./component/location";
 
