--- a/sass/component/_MakeAppointment.scss
+++ b/sass/component/_MakeAppointment.scss
@@ -1,34 +1,39 @@
 @import '../component/form';
 
-.contact-us{
-    display: flex;
-    flex-direction: column;
+.contact-us {
+    @include column;
     align-items: center;
-}
-.contact-us h1{
-    margin-top: 30px;
-    margin-bottom: 50px;
 
-}
-.contact-us .check-schedule{
-    width: 100%;
-    height: 475px;
-    background-image: url(/image/form.jpg);
-}
-.contact-us .check-schedule .container{
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    margin-right: 80px;
-}
-.contact-us .check-schedule button{
-    width: 150px;
-    padding: 10px;
-    margin-top: 30px;
-    margin-left: 70px;
-    border-radius: 10px;
-    border: none;
-    background: darkblue;
-    color: white;
+    h1 {
+        margin: {
+            top: 30px;
+            bottom: 50px;
+        }
 
+        ;
+
+        .check-schedule {
+            width: 100%;
+            height: 475px;
+            background-image: url(/image/form.jpg);
+
+            .container {
+                @include column;
+                align-items: end;
+                margin-right: 80px;
+            }
+
+            button {
+                width: 150px;
+                padding: 10px;
+                margin-top: 30px;
+                margin-left: 70px;
+                border-radius: 10px;
+                border: none;
+                background:$seconaryColor;
+                color: white;
+            }
+        }
+
+    }
 }
