--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -1,46 +1,49 @@
-footer{
+footer {
     height: 250px;
     background: rgb(192, 225, 255);
-    margin-top: -4px; 
+    margin-top: -4px;
     display: flex;
     align-items: center;
-}
-.main-footer{
-    display: flex;
-    justify-content: space-between;
-    margin-left: 90px;
-}
-footer .main-footer .footer-left{
-    flex: 1;
-    display: flex;
-    justify-content: center;
-}
-footer .main-footer .footer-center{
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    margin-top: -25px;
-}
 
-footer .main-footer .footer-center ul li{
-    list-style: none;
-    margin-top: 20px;
-}
-footer .main-footer .footer-center ul li a {
-    text-decoration: none;
-    
-    
-}
-footer .main-footer .footer-right{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
-footer .main-footer .footer-right .footer-item{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-top: 20px;
+    .main-footer {
+        @include between;
+        margin-left: 90px;
+
+        .footer-left {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+        }
+
+        .footer-center {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            margin-top: -25px;
+
+            ul {
+                li {
+                    list-style: none;
+                    margin-top: 20px;
+
+                    a {
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+
+        .footer-right {
+            flex: 1;
+            @include center;
+            flex-direction: column;
+            .footer-item {
+                display: flex;
+                align-items: center;
+                gap: 20px;
+                margin-top: 20px;
+
+            }
+        }
+    }
 }
