--- a/sass/component/_group-mxin.scss
+++ b/sass/component/_group-mxin.scss
@@ -2,3 +2,17 @@
     display: flex;
     justify-content: space-between;
 }
+@mixin centered{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+@mixin column{
+    display: flex;
+    flex-direction: column;
+}
+
+@mixin margin{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
