--- a/sass/component/_ourDoctor.scss
+++ b/sass/component/_ourDoctor.scss
@@ -1,45 +1,49 @@
 .our-doctor {
-    display: flex;
-    flex-direction: column;
+    @include column;
     align-items: center;
-    margin-left: 50px;
-    margin-right: 50px;
-}
-.our-doctor h1{
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-.our-doctor .container-buntton{
-    display: flex;
-    justify-content: end;
-    margin-right: 180px;
-    width: 100%;
-    margin-bottom: 50px;
-}
-.our-doctor .container {
-    display: flex;
-    gap: 40px;
-}
-.our-doctor .container .card{
-    height: 270px;
-}
-.our-doctor .container .card-header{
-    width: 270px;
-    height: 170px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.our-doctor .container .card-header img{
-    height: 170px;
-}
-.our-doctor .container .card-footer{
-    background: lightblue;
-    height: 70px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    gap: 10px;
+
+    margin: {
+        left: 50px;
+        right: 50px;
+    };
+    h1 {
+        @include margin;
+    }
+    .container-buntton {
+        display: flex;
+        justify-content: end;
+        margin-right: 180px;
+        width: 100%;
+        margin-bottom: 50px;
+    }
+
+    .container {
+        display: flex;
+        gap: 40px;
+
+        .card {
+            height: 270px;
+
+            .card-header {
+                width: 270px;
+                height: 170px;
+                @include centered;
+
+                img {
+                    height: 170px;
+                }
+            }
+
+            .card-footer {
+                background: $mainColor;
+                height: 70px;
+                @include centered;
+                flex-direction: column;
+                border-radius: $borderRadius;
+                gap: $borderRadius;
+            }
+        }
+
+    }
+
 }
