--- a/sass/component/_MakeAppointment.scss
+++ b/sass/component/_MakeAppointment.scss
@@ -1,4 +1,6 @@
-@import '../component/form';
+@import './variable';
+@import './group-mxin';
+
 
 .contact-us {
     @include column;
@@ -30,10 +32,44 @@
                 margin-left: 70px;
                 border-radius: 10px;
                 border: none;
-                background:$seconaryColor;
+                background: $seconaryColor;
                 color: white;
             }
         }
 
+    }
+
+    .container {
+        .form-container {
+            width: 400px;
+            height: 350px;
+            background: #a8a2a277;
+            @include centered;
+            flex-direction: column;
+            border-radius: $borderRadius;
+            border: 2px solid rgb(70, 68, 68);
+
+            form {
+                @include centered;
+                flex-direction: column;
+
+                input {
+                    margin-top: 25px;
+                    padding: 10px;
+                    width: 150%;
+                    border-radius: 5px;
+                    border: none;
+                }
+            }
+
+            button {
+                width: 100px;
+                padding: 10px;
+                margin-top: 25px;
+                border-radius: 10px;
+                border: none;
+                background: rgb(90, 202, 240);
+            }
+        }
     }
 }
