--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -1,3 +1,5 @@
+@import './variable';
+@import './group-mxin';
 footer {
     height: 250px;
     background: rgb(192, 225, 255);
@@ -35,7 +37,7 @@ footer {
 
         .footer-right {
             flex: 1;
-            @include center;
+            @include centered;
             flex-direction: column;
             .footer-item {
                 display: flex;
