--- a/css/home.css
+++ b/css/home.css
@@ -171,18 +171,51 @@ footer .main-footer .footer-right .footer-item {
   margin-top: 30px;
   margin-bottom: 50px;
 }
-.contact-us h1 .check-schedule {
+.contact-us .check-schedule {
   width: 100%;
   height: 475px;
   background-image: url(/image/form.jpg);
+  background-size: cover;
 }
-.contact-us h1 .check-schedule .container {
+.contact-us .check-schedule .container {
   display: flex;
   flex-direction: column;
   align-items: end;
   margin-right: 80px;
 }
-.contact-us h1 .check-schedule button {
+.contact-us .check-schedule .container .form-container {
+  width: 400px;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  border: 2px solid gainsboro;
+  background: rgba(0, 0, 0, 0.3411764706);
+}
+.contact-us .check-schedule .container .form-container form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.contact-us .check-schedule .container .form-container form input {
+  margin-top: 25px;
+  padding: 10px;
+  width: 150%;
+  border-radius: 5px;
+  border: none;
+}
+.contact-us .check-schedule .container .form-container button {
+  width: 100px;
+  padding: 10px;
+  margin-top: 25px;
+  border-radius: 10px;
+  border: none;
+  background: blue;
+}
+.contact-us .check-schedule button {
   width: 150px;
   padding: 10px;
   margin-top: 30px;
@@ -190,39 +223,7 @@ footer .main-footer .footer-right .footer-item {
   border-radius: 10px;
   border: none;
   background: blue;
-  color: white;
-}
-.contact-us .container .form-container {
-  width: 400px;
-  height: 350px;
-  background: rgba(168, 162, 162, 0.4666666667);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border-radius: 10px;
-  border: 2px solid rgb(70, 68, 68);
-}
-.contact-us .container .form-container form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.contact-us .container .form-container form input {
-  margin-top: 25px;
-  padding: 10px;
-  width: 150%;
-  border-radius: 5px;
-  border: none;
-}
-.contact-us .container .form-container button {
-  width: 100px;
-  padding: 10px;
-  margin-top: 25px;
-  border-radius: 10px;
-  border: none;
-  background: rgb(90, 202, 240);
+  color: gainsboro;
 }
 
 .location h1 {
