--- a/sass/component/_MakeAppointment.scss
+++ b/sass/component/_MakeAppointment.scss
@@ -1,7 +1,6 @@
 @import './variable';
 @import './group-mxin';
 
-
 .contact-us {
     @include column;
     align-items: center;
@@ -13,63 +12,67 @@
         }
 
         ;
+    }
 
-        .check-schedule {
-            width: 100%;
-            height: 475px;
-            background-image: url(/image/form.jpg);
+    .check-schedule {
+        width: 100%;
+        height: 475px;
+        background-image: url(/image/form.jpg);
+        background-size: cover;
 
-            .container {
-                @include column;
-                align-items: end;
-                margin-right: 80px;
-            }
+        .container {
+            @include column;
+            align-items: end;
+            margin-right: 80px;
 
-            button {
-                width: 150px;
-                padding: 10px;
-                margin-top: 30px;
-                margin-left: 70px;
+            .form-container {
+                width: 400px;
+                height: 350px;
+                @include centered;
+                flex-direction: column;
                 border-radius: 10px;
-                border: none;
-                background: $seconaryColor;
-                color: white;
+                border: 2px solid $primaryColor;
+                background: #00000057;
+
+                form {
+                    @include centered;
+                    flex-direction: column;
+                   
+
+                    input {
+                        margin-top: 25px;
+                        padding: 10px;
+                        width: 150%;
+                        border-radius: 5px;
+                        border: none;
+                    }
+                }
+
+                button {
+                    width: 100px;
+                    padding: $borderRadius;
+                    margin-top: 25px;
+                    border-radius: $borderRadius;
+                    border: none;
+                    background:$seconaryColor;
+                }
             }
         }
 
-    }
-
-    .container {
-        .form-container {
-            width: 400px;
-            height: 350px;
-            background: #a8a2a277;
-            @include centered;
-            flex-direction: column;
+        button {
+            width: 150px;
+            padding: $borderRadius;
+            margin-top: 30px;
+            margin-left: 70px;
             border-radius: $borderRadius;
-            border: 2px solid rgb(70, 68, 68);
+            border: none;
+            background: $seconaryColor;
+            color: $primaryColor;
 
-            form {
-                @include centered;
-                flex-direction: column;
-
-                input {
-                    margin-top: 25px;
-                    padding: 10px;
-                    width: 150%;
-                    border-radius: 5px;
-                    border: none;
-                }
-            }
-
-            button {
-                width: 100px;
-                padding: 10px;
-                margin-top: 25px;
-                border-radius: 10px;
-                border: none;
-                background: rgb(90, 202, 240);
-            }
         }
     }
 }
+
+
+
+
