--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,6 +1,6 @@
 @import './main.scss';
-@import './component/whyTheyChooseUs';
-@import './component/ourDoctor';
-@import './component/MakeAppointment';
+@import './content/whyTheyChooseUs';
+@import './content/ourDoctor';
+@import './content/MakeAppointment';
 @import "./component/location";
 
