--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -1,5 +1,5 @@
 @import "./main.scss";
-@import "./component/MakeAppointment";
+@import './content/MakeAppointment';
 @import "./component/location";
 
 .working-hour {
