--- a/sass/content/_whyTheyChooseUs.scss
+++ b/sass/content/_whyTheyChooseUs.scss
@@ -1,5 +1,5 @@
-@import './variable';
-@import './group-mxin';
+@import '../component/variable';
+@import '../component/group-mxin';
 
 .why-they-choose-us {
     height: 270px;
