--- a/css/service.css
+++ b/css/service.css
@@ -35,47 +35,73 @@ nav {
 }
 
 footer {
-  height: 250px;
-  background: rgb(192, 225, 255);
-  margin-top: -4px;
-  display: flex;
-  align-items: center;
+  background: skyblue;
+  height: 320px;
 }
-footer .main-footer {
+footer .footer-container {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 100%;
   display: flex;
   justify-content: space-between;
-  margin-left: 90px;
+  align-items: center;
+  gap: 50px;
 }
-footer .main-footer .footer-left {
-  flex: 1;
+footer .footer-container .footer-left img {
+  width: 200px;
+  margin-bottom: 110px;
+}
+footer .footer-container .footer-center {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  width: 350px;
+  margin: 10px 15px;
+  line-height: 45px;
 }
-footer .main-footer .footer-center {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  margin-top: -25px;
+footer .footer-container .footer-center .footer-center-header {
+  height: 55px;
 }
-footer .main-footer .footer-center ul li {
+footer .footer-container .footer-center .footer-center-footer ul li {
   list-style: none;
-  margin-top: 20px;
 }
-footer .main-footer .footer-center ul li a {
+footer .footer-container .footer-center .footer-center-footer ul li a {
   text-decoration: none;
 }
-footer .main-footer .footer-right {
-  flex: 1;
+footer .footer-container .footer-right {
+  width: 380px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
 }
-footer .main-footer .footer-right .footer-item {
+footer .footer-container .footer-right .contact-footer {
   display: flex;
   align-items: center;
-  gap: 20px;
-  margin-top: 20px;
+}
+footer .footer-container .footer-right .contact-footer i {
+  background-color: blue;
+  color: gainsboro;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+}
+footer .footer-container .footer-right .contact-footer i .fa-map-marker {
+  font-size: 25px;
+  width: 80px;
+  height: 20px;
+  border-radius: 50%;
+}
+footer .footer-container .footer-right .contact-footer i .fa-telegram {
+  line-height: 40px;
+  font-size: 27px;
+}
+footer .footer-container .footer-right .contact-footer i .fa-envelope {
+  font-size: 15px;
+  line-height: 38px;
 }
 
 * {
