--- a/sass/component/_MakeAppointment.scss
+++ b/sass/component/_MakeAppointment.scss
@@ -33,7 +33,7 @@
                 border-radius: 10px;
                 border: none;
                 background: $seconaryColor;
-                color: white;
+                color: rgb(255, 255, 255);
             }
         }
 
