--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -3,8 +3,11 @@
 footer {
     background: skyblue;
     height: 320px;
+    margin-top: -5PX;
     .footer-container {
-        @include margin;
+        // @include margin;
+        margin-left: $mainMargin;
+        margin-right: $mainMargin;
         height: 100%;
         @include between;
         align-items: center;
@@ -43,11 +46,11 @@ footer {
                 display: flex;
                 align-items: center;
                 i {
-                    background-color:$seconaryColor;
-                    color: $primaryColor;
+                    // background-color:$seconaryColor;
+                    color: $seconaryColor;
                     font-size: 25px;
-                    width: 38px;
-                    height: 38px;
+                    // width: 38px;
+                    // height: 38px;
                     border-radius: 50%;
                     text-align: center;
                     line-height: 42px;
@@ -63,7 +66,7 @@ footer {
                         font-size: 27px;
                     }
                     .fa-envelope {
-                        font-size: 15px;
+                        font-size: 10px;
                         line-height: 38px;
                     }
                 }
