responsive in sass

--- a/css/informationOfDoctor.css
+++ b/css/informationOfDoctor.css
@@ -91,8 +91,9 @@ footer .main-footer .footer-right .footer-item {
   justify-content: center;
   margin-top: 40px;
 }
-.container h3 {
+.container h1 {
   text-align: center;
+  color: blue;
 }
 .container .InformationOfdoctor {
   display: flex;
