--- a/sass/component/_variable.scss
+++ b/sass/component/_variable.scss
@@ -1,5 +1,5 @@
 $mainMargin:50px;
 $mainColor:rgb(171, 215, 239);
-$primaryColor:gainsboro;
+$primaryColor:rgba(192, 190, 190, 0.943);
 $seconaryColor:blue;
 $borderRadius:10px;
