--- a/css/contact.css
+++ b/css/contact.css
@@ -93,11 +93,12 @@ footer .main-footer .footer-right .footer-item {
 .contact-us h1 {
   margin-top: 30px;
   margin-bottom: 50px;
+  color: blue;
 }
 .contact-us .check-schedule {
   width: 100%;
   height: 475px;
-  background-image: url(/image/form.jpg);
+  background-image: url(/image/img-of-content/form.jpg);
   background-size: cover;
 }
 .contact-us .check-schedule .container {
@@ -114,7 +115,7 @@ footer .main-footer .footer-right .footer-item {
   align-items: center;
   flex-direction: column;
   border-radius: 10px;
-  border: 2px solid gainsboro;
+  border: 2px solid rgba(192, 190, 190, 0.943);
   background: rgba(0, 0, 0, 0.3411764706);
 }
 .contact-us .check-schedule .container .form-container form {
@@ -146,7 +147,13 @@ footer .main-footer .footer-right .footer-item {
   border-radius: 10px;
   border: none;
   background: blue;
-  color: gainsboro;
+  color: rgba(192, 190, 190, 0.943);
+}
+@media screen and (max-width: 768px) {
+  .contact-us .check-schedule button {
+    padding: 5px;
+    margin-bottom: 10px;
+  }
 }
 
 .location h1 {
@@ -164,4 +171,5 @@ footer .main-footer .footer-right .footer-item {
 .working-hour h1 {
   text-align: center;
   margin-bottom: 50px;
+  color: blue;
 }/*# sourceMappingURL=contact.css.map */
