--- a/css/home.css
+++ b/css/home.css
@@ -86,7 +86,6 @@ footer .main-footer .footer-right .footer-item {
 }
 
 .why-they-choose-us {
-  height: 270px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -96,16 +95,33 @@ footer .main-footer .footer-right .footer-item {
 .why-they-choose-us h1 {
   margin-top: 50px;
   margin-bottom: 50px;
+  color: blue;
 }
 .why-they-choose-us .card-container {
   display: flex;
   gap: 40px;
 }
+@media screen and (max-width: 768px) {
+  .why-they-choose-us .card-container {
+    flex-wrap: wrap;
+  }
+}
 .why-they-choose-us .card-container .card {
-  width: 270px;
+  width: 25%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .why-they-choose-us .card-container .card {
+    width: 45%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 576px) {
+  .why-they-choose-us .card-container .card {
+    width: 98%;
+  }
 }
 .why-they-choose-us .card-container .card p {
   margin-top: 20px;
@@ -115,13 +131,14 @@ footer .main-footer .footer-right .footer-item {
 .our-doctor {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
   margin-left: 50px;
   margin-right: 50px;
 }
 .our-doctor h1 {
   margin-top: 50px;
   margin-bottom: 50px;
+  color: blue;
 }
 .our-doctor .container-buntton {
   display: flex;
@@ -130,12 +147,33 @@ footer .main-footer .footer-right .footer-item {
   width: 100%;
   margin-bottom: 50px;
 }
+@media screen and (max-width: 768px) {
+  .our-doctor .container-buntton {
+    display: none;
+  }
+}
 .our-doctor .container {
   display: flex;
   gap: 40px;
 }
+@media screen and (max-width: 1200px) {
+  .our-doctor .container {
+    flex-wrap: wrap;
+  }
+}
 .our-doctor .container .card {
   height: 270px;
+  width: 24%;
+}
+@media screen and (max-width: 1200px) {
+  .our-doctor .container .card {
+    width: 33%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .our-doctor .container .card {
+    width: 100%;
+  }
 }
 .our-doctor .container .card .card-header {
   width: 270px;
@@ -143,6 +181,11 @@ footer .main-footer .footer-right .footer-item {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .our-doctor .container .card .card-header {
+    margin-left: 17%;
+  }
 }
 .our-doctor .container .card .card-header img {
   height: 170px;
@@ -157,6 +200,11 @@ footer .main-footer .footer-right .footer-item {
   border-radius: 10px;
   gap: 10px;
 }
+@media screen and (max-width: 1200px) {
+  .our-doctor .container .card .card-footer {
+    height: 60px;
+  }
+}
 
 .contact-us {
   display: flex;
@@ -166,11 +214,12 @@ footer .main-footer .footer-right .footer-item {
 .contact-us h1 {
   margin-top: 30px;
   margin-bottom: 50px;
+  color: blue;
 }
 .contact-us .check-schedule {
   width: 100%;
   height: 475px;
-  background-image: url(/image/form.jpg);
+  background-image: url(/image/img-of-content/form.jpg);
   background-size: cover;
 }
 .contact-us .check-schedule .container {
@@ -187,7 +236,7 @@ footer .main-footer .footer-right .footer-item {
   align-items: center;
   flex-direction: column;
   border-radius: 10px;
-  border: 2px solid gainsboro;
+  border: 2px solid rgba(192, 190, 190, 0.943);
   background: rgba(0, 0, 0, 0.3411764706);
 }
 .contact-us .check-schedule .container .form-container form {
@@ -219,7 +268,13 @@ footer .main-footer .footer-right .footer-item {
   border-radius: 10px;
   border: none;
   background: blue;
-  color: gainsboro;
+  color: rgba(192, 190, 190, 0.943);
+}
+@media screen and (max-width: 768px) {
+  .contact-us .check-schedule button {
+    padding: 5px;
+    margin-bottom: 10px;
+  }
 }
 
 .location h1 {
