--- a/sass/content/_MakeAppointment.scss
+++ b/sass/content/_MakeAppointment.scss
@@ -1,5 +1,6 @@
 @import '../component/variable';
 @import '../component/group-mxin';
+@import '../mixins/responsive';
 
 .contact-us {
     @include column;
@@ -12,19 +13,19 @@
         }
 
         ;
+        color:$seconaryColor;
     }
 
     .check-schedule {
         width: 100%;
         height: 475px;
-        background-image: url(/image/form.jpg);
+        background-image: url(/image/img-of-content/form.jpg);
         background-size: cover;
 
         .container {
             @include column;
             align-items: end;
             margin-right: 80px;
-
             .form-container {
                 width: 400px;
                 height: 350px;
@@ -37,7 +38,7 @@
                 form {
                     @include centered;
                     flex-direction: column;
-                   
+
 
                     input {
                         margin-top: 25px;
@@ -54,7 +55,7 @@
                     margin-top: 25px;
                     border-radius: $borderRadius;
                     border: none;
-                    background:$seconaryColor;
+                    background: $seconaryColor;
                 }
             }
         }
@@ -69,10 +70,10 @@
             background: $seconaryColor;
             color: $primaryColor;
 
+            @include responsive(md) {
+                padding: 5px;
+                margin-bottom: 10px;
+            }
         }
     }
 }
-
-
-
-
