--- a/css/home.css
+++ b/css/home.css
@@ -171,6 +171,16 @@ footer .footer-container .footer-right .contact-footer i .fa-envelope {
   width: 100%;
   margin-bottom: 50px;
 }
+@media screen and (max-width: 1200px) {
+  .our-doctor .container-buntton {
+    flex-direction: row;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .our-doctor .container-buntton {
+    justify-content: center;
+  }
+}
 @media screen and (max-width: 768px) {
   .our-doctor .container-buntton {
     display: none;
@@ -182,7 +192,10 @@ footer .footer-container .footer-right .contact-footer i .fa-envelope {
 }
 @media screen and (max-width: 1200px) {
   .our-doctor .container {
+    gap: 50px;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
 }
 .our-doctor .container .card {
