--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -4,7 +4,6 @@
 
 .working-hour {
     @include margin;
-
     margin: {
         left: 65px;
         right:$mainMargin;
@@ -13,5 +12,11 @@
         text-align: center;
         margin-bottom: 50px;
         color: $seconaryColor;
+    }
+    p,li{
+        font-size: 20px;
+        @include responsive(md){
+            font-size: 13px;
+        }
     }
 }
