--- a/css/contact.css
+++ b/css/contact.css
@@ -48,6 +48,9 @@ footer .footer-container {
   align-items: center;
   gap: 50px;
 }
+footer .footer-container .footer-left {
+  width: 350px;
+}
 footer .footer-container .footer-left img {
   width: 200px;
   margin-bottom: 110px;
@@ -158,6 +161,7 @@ footer .footer-container .footer-right .contact-footer i .fa-envelope {
   width: 100px;
   padding: 10px;
   margin-top: 25px;
+  margin-right: 50px;
   border-radius: 10px;
   border: none;
   background: blue;
