--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -14,6 +14,7 @@ footer {
         gap: 50px;
 
         .footer-left{
+            width: 350px;
             img {
                 width: 200px;
                 margin-bottom: 110px;
