--- a/sass/content/_ourDoctor.scss
+++ b/sass/content/_ourDoctor.scss
@@ -17,6 +17,16 @@
         margin-right: 180px;
         width: 100%;
         margin-bottom: 50px;
+        
+        button{
+            padding:10px;
+            width: 170px;
+            display: flex;
+            justify-content: space-evenly;
+            border-radius: $borderRadius;
+            border: none;
+            background: $mainColor;
+        }
     }
 
     .container {
