table and style

--- a/sass/component/_variable.scss
+++ b/sass/component/_variable.scss
@@ -3,3 +3,5 @@ $mainColor:rgb(171, 215, 239);
 $primaryColor:gainsboro;
 $seconaryColor:blue;
 $borderRadius:10px;
+$tablecolor: red;
+$tablecolorblack: black;
