--- a/sass/content/_ourDoctor.scss
+++ b/sass/content/_ourDoctor.scss
@@ -1,89 +1,108 @@
 @import '../component/variable';
 @import '../component/group-mxin';
+@import '../mixins/responsive';
+
 .our-doctor {
     @include column;
     text-align: center;
+
     margin: {
         left: 50px;
         right: 50px;
-    };
+    }
+
+    ;
+
     h1 {
         @include margin;
         color: $seconaryColor;
     }
+
     .container-buntton {
-        @include responsive(xl){
+        @include responsive(xl) {
             flex-direction: row,
         }
+
         display: flex;
         justify-content: end;
         margin-right: 180px;
         width: 100%;
         margin-bottom: 50px;
-// <<<<<<< HEAD
-        
-        button{
-            padding:10px;
+        // <<<<<<< HEAD
+
+        button {
+            padding: 10px;
             width: 170px;
             display: flex;
             justify-content: space-evenly;
             border-radius: $borderRadius;
             border: none;
             background: $mainColor;
-// =======
-        @include responsive(xl){
-            justify-content: center;
-        }
-        @include responsive(md){
-            display: none;
-// >>>>>>> 294d14811030295457420b2e895f3c4260898a2e
-        }
-    }
-    .container {
-        display: flex;
-        gap: 40px;
-        @include responsive(xl){
-            gap: 50px;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-        }
-        .card {
-            height: 270px;
-            width: 24%;
-            @include responsive(xl){
-                width: 33%;
-            }
-            @include responsive(md){
-                width: 100%;
+
+            // =======
+            @include responsive(xl) {
+                justify-content: center;
             }
 
-            .card-header {
-                width: 270px;
-                height: 170px;
-                @include centered;
-                @include responsive(md){
-                    margin-left: 17%;
+            @include responsive(md) {
+                display: none;
+                // >>>>>>> 294d14811030295457420b2e895f3c4260898a2e
+            }
+        }
+
+        .container {
+            display: flex;
+            gap: 40px;
+
+            @include responsive(xl) {
+                gap: 50px;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .card {
+                height: 270px;
+                width: 24%;
+                @include responsive(xl) {
+                    width: 33%;
                 }
 
+                @include responsive(md) {
+                    width: 100%;
+                }
 
-                img {
+                .card-header {
+                    width: 270px;
                     height: 170px;
+                    @include centered;
+
+                    @include responsive(md) {
+                        margin-left: 17%;
+                        height: 100px;
+                    }
+
+
+                    img {
+                        height: 170px;
+                    }
+                }
+
+                .card-footer {
+                    @include responsive(xl) {
+                        height: 60px;
+                    }
+
+                    background: $mainColor;
+                    height: 70px;
+                    @include centered;
+                    flex-direction: column;
+                    border-radius: $borderRadius;
+                    gap: $borderRadius;
                 }
             }
-            .card-footer {
-                @include responsive(xl){
-                    height: 60px;  
-                }
-                background: $mainColor;
-                height: 70px;
-                @include centered;
-                flex-direction: column;
-                border-radius: $borderRadius;
-                gap: $borderRadius;
-            }
+
         }
 
     }
-
 }
