--- a/css/table-schedul.css
+++ b/css/table-schedul.css
@@ -146,4 +146,20 @@ table .color,
 th .color,
 td .color {
   color: red;
+}
+
+@media (max-width: 700px) {
+  table {
+    height: 70vh;
+    width: 95%;
+  }
+  tr > th {
+    font-size: 8px;
+  }
+  tr > td {
+    font-size: 10px;
+  }
+  h1 {
+    font-size: 20px;
+  }
 }/*# sourceMappingURL=table-schedul.css.map */
