--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,6 +1,7 @@
 @import './main.scss';
 @import './content/whyTheyChooseUs';
-@import './content/ourDoctor';
+@import './content/ourDoctor1';
 @import './content/MakeAppointment';
 @import "./component/location";
+
 
